<resources>
    <string name="app_name">Graphing Calculator</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="sign_out">Sign out with Google</string>
    <string name="scale_graph">Manually Scale Graph</string>
    <string name="built_in_function">Function templates</string>
    <string name="customize_expression">Customize expression</string>
    <string name="calculate">Use Calculator</string>
    <string name="sci_calculate">Use Scientific Calculator</string>
    <string name="upload_graph">Upload Graph to Database</string>
    <string name="fetch_graph">Fetch Graph from Database</string>
    <string name="open_nav">Open Navigation Menu</string>
    <string name="open_settings">Open Graph Settings</string>
    <string name="snap_to_origin">Snaps GraphView back to Origin</string>
    <string name="expand_function_list">Expands Function List</string>
    <string name="collapse_function_list">Collapses Function List</string>

    <string name="projector_mode">Projector Mode</string>
    <string name="radians">Radians</string>
    <string name="degrees">Degrees</string>

    <string name="settings_descriptor_font">sans-serif</string>
    <string name="settings_math_font">serif</string>

    <string name="minX_value">-10</string>
    <string name="maxX_value">10</string>
    <string name="minY_value">-15</string>
    <string name="maxY_value">15</string>

    <!-- Calculator Strings -->
    <string name="menu_settings">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_show">Show</string>
    <string name="clears">Clear</string>
    <string name="clearAll">ClearAll</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_add">+</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_sub">-</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_mlt">*</string>
    <string name="btn_0">0</string>
    <string name="btn_spot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_div">/</string>
    <string name="btn_square">x^2</string>
    <string name="btn_sqrt">√x</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_cot">cot</string>
    <string name="title_activity_basic_calculator">BasicCalculator</string>

    <!--TODO remove me later KEYBOARD VALUES-->
    <string name="log">REMOVEME</string>
    <string name="decimal_power">DCMPWR</string>
    <string name="appr">appr</string>
    <string name="decimal_point">dcmpnt</string>
    <string name="trig">trig</string>

</resources>
