<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator"
    android:background="#ffffffff"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/et_show"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:cursorVisible="false"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/et_show"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_weight="1"/>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablelayout"
        android:layout_weight="10"
        android:layout_marginTop="4dp">
        <LinearLayout
            android:id="@+id/linerlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/clears"
                android:layout_width="60dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/clears"/>
            <Button
                android:id="@+id/clearAll"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:text="@string/clearAll"
                android:textSize="25sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TableRow
            android:id="@+id/row_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_1"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_1"
                android:textSize="25sp"
                />
            <Button
                android:id="@+id/btn_2"
                android:layout_height="fill_parent"
                android:layout_width="40dip"
                android:layout_weight="1"
                android:text="@string/btn_2"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_3"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_3"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/btn_add"
                android:layout_width="40dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_add"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_4"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:text="@string/btn_4"
                android:textSize="25sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_5"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:text="@string/btn_5"
                android:textSize="25sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_6"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:text="@string/btn_6"
                android:textSize="25sp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_sub"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:text="@string/btn_sub"
                android:textSize="25sp"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_7"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_7"
                android:textSize="25sp"
                />
            <Button
                android:id="@+id/btn_8"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_8"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_9"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_9"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_mlt"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_mlt"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_0"
                android:layout_height="fill_parent"
                android:layout_width="40dp"
                android:layout_weight="1"
                android:text="@string/btn_0"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_spot"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_spot"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_tan"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_tan"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_div"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_div"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_square"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_square"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_sqrt"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_sin"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_sin"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_cos"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_cos"
                android:textSize="25sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_cot"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_cot"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/btn_equal"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/btn_equal"
                android:textSize="25sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>