<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/no_account">
        <item
            android:id="@+id/drawer_sign_in"
            android:icon="@drawable/ic_icons8_google"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/drawer_sign_out"
            android:icon="@drawable/ic_icons8_google"
            android:title="@string/sign_out" />
    </group>

    <group android:id="@+id/account">
        <item
            android:id="@+id/drawer_upload"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/upload_graph" />
        <item
            android:id="@+id/drawer_fetch"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/fetch_graph" />
    </group>

    <group android:id="@+id/graph_tools">
        <!--<item
            android:id="@+id/drawer_calculate_old"
            android:icon="@drawable/ic_multiline_chart_black_24dp"
            android:title="@string/calculate" />-->
        <item
            android:id="@+id/drawer_calculate"
            android:icon="@drawable/ic_multiline_chart_black_24dp"
            android:title="@string/sci_calculate" />
    </group>

    <item android:title="Examples" >
        <menu>
            <item
                android:id="@+id/example_point_slope_form"
                android:title="Point Slope Form" />
            <item
                android:id="@+id/example_parabolic_curve"
                android:title="Parabolic Curve" />
        </menu>
    </item>
</menu>