<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:descendantFocusability="blocksDescendants"
    tools:context="teamteam.graphing_calculator.MainActivity">

    <!-- Navigation View -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/nav_menu"/>

    <!-- Main Content -->
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Graph View -->
        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Graphing Settings Menu -->
        <LinearLayout
            android:id="@+id/graph_tool_menu"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/soft_rectangle_background_flat"
            android:elevation="6dp">

            <LinearLayout
                android:id="@+id/minX_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="minX:" />
                <EditText
                    android:id="@+id/minX"
                    android:padding="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/maxX_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="maxX:"/>
                <EditText
                    android:id="@+id/maxX"
                    android:padding="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/minY_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="minY:"/>
                <EditText
                    android:id="@+id/minY"
                    android:padding="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="maxY:"/>
                <EditText
                    android:id="@+id/maxY"
                    android:padding="0dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="update"
                android:text="Update" />

        </LinearLayout>

        <!-- Open Nav Menu Button -->
        <ImageButton
            android:contentDescription="@string/open_nav"
            android:id="@+id/open_nav"
            android:layout_margin="3dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/soft_rectangle_background"
            android:src="@drawable/ic_menu_black_24dp" />

        <!-- Right Aligned Buttons -->
        <RelativeLayout
            android:id="@+id/right_aligned_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" >

            <ImageButton
                android:id="@+id/open_settings"
                android:contentDescription="@string/open_settings"
                android:layout_margin="3dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/soft_rectangle_background"
                android:adjustViewBounds="false"
                android:src="@drawable/ic_build_black_24dp" />

            <ImageButton
                android:id="@+id/snap_to_origin"
                android:contentDescription="@string/snap_to_origin"
                android:layout_margin="3dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/soft_rectangle_background"
                android:layout_below="@id/open_settings"
                android:src="@drawable/ic_home_black_24dp" />

        </RelativeLayout>

        <!-- Expand Function List -->
        <ImageButton
            android:id="@+id/expand_function_list"
            android:contentDescription="@string/expand_function_list"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/rectangle_background"
            android:src="@drawable/ic_arrow_drop_up_black_24dp"
            />


    </FrameLayout>

</android.support.v4.widget.DrawerLayout>

